fix background overlay for list items (links in the table) and table of content in the dark mode

--- a/components/PageProfile.module.css
+++ b/components/PageProfile.module.css
@@ -8,6 +8,9 @@
     padding-left: 4px;
     padding-right: 4px;
     padding-bottom: 10px;
+    /* The position below does not work. */
+    position: relative !important;
+    top: 0 !important;
     /* background-color: #FC488F; */
 }
 
